2001-09-18  Alan Modra  <amodra@bigpond.net.au>

	* objalloc.h (OBJALLOC_ALIGN): Define using offsetof.

2001-09-17  Kaveh R. Ghazi  <ghazi@caip.rutgers.edu>

	* libiberty.h (concat_length, concat_copy, concat_copy2,
	libiberty_concat_ptr, ACONCAT): New.

	* libiberty.h (ASTRDUP): New macro.
	libiberty_optr, libiberty_nptr, libiberty_len): Declare.

2001-09-17  Kaveh R. Ghazi  <ghazi@caip.rutgers.edu>

	* libiberty.h (ASTRDUP): New macro.
	libiberty_optr, libiberty_nptr, libiberty_len): Declare.

2001-08-29  Kaveh R. Ghazi  <ghazi@caip.rutgers.edu>

	* ansidecl.h: Update comments reflecting previous change.

2001-08-27  Kaveh R. Ghazi  <ghazi@caip.rutgers.edu>

	* ansidecl.h (VA_OPEN, VA_CLOSE): Allow multiple uses.

2001-08-25  Nick Clifton  <nickc@cambridge.redhat.com>

	* bfdlink.h (struct bfd_link_info): Change 'spare_dynamic_tags' to
	unsigned to remove a compile time warning message.

2001-08-24  H.J. Lu  <hjl@gnu.org>

	* bfdlink.h (bfd_link_hash_table_type): New. The linker hash
	table type, bfd_link_generic_hash_table and
	bfd_link_elf_hash_table.
	(bfd_link_hash_table): Add a new field, type, for the linker
	hash table type.

2001-08-23  Jakub Jelinek  <jakub@redhat.com>

	* bfdlink.h (struct bfd_link_info): Add combreloc and
	spare_dynamic_tags fields.

2001-08-23  Lars Brinkhoff  <lars@nocrew.org>

	* dyn-string.h, fibheap.h, partition.h, sort.h, splay-tree.h:
	replace "GNU CC" with "GCC".

2001-08-21  Richard Henderson  <rth@redhat.com>

	* fibheap.h: Tidy formatting.
	(fibnode_t): Limit degree to 31 bits to avoid warning.

2001-08-20  Daniel Berlin  <dan@cgsoftware.com>

	* fibheap.h: New file. Fibonacci heap.

2001-08-20  Andrew Cagney  <ac131313@redhat.com>

	* floatformat.h (floatformat_arm_ext): Document as deprecated.
	(floatformat_arm_ext_big, floatformat_arm_ext_littlebyte_bigword)
	(floatformat_ia64_spill_little, floatformat_ia64_quad_little)
	(floatformat_ia64_spill_big, floatformat_ia64_quad_big)
	(floatformat_m88110_harris_ext): Declare.
